# TextScanTranslator

./: README.md  app.py  pyproject.toml
attached_assets/: translator.py
